--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'globals';
+//@import 'mixins';
 
 .mobile-header {
   &__nav {
@@ -52,6 +53,71 @@
     width: 100px;
   }
 }
+
+//Desktop-header
+.main-header {
+    
+  &__nav {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding-right: 210px;
+    padding-left: 210px;
+    
+
+  }
+  &__logo {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding-top: 22px;
+    padding-right: 300px;
+    
+  }
+  &__logo :nth-child(2) {
+    align-self: flex-end;
+    padding-bottom: 30px;
+    padding-left: 4px;
+  }
+  &__nav__links {
+    
+     padding-top: 28px;
+    padding-bottom: 28px;
+  }
+  &__nav__link {
+      text-decoration: none;
+      color: $blue-color;
+      font-size: 16px;
+      font-weight: 400;
+      margin-right: 36px;
+     
+       
+
+      //&:not(:last-child){
+       // margin-right: 36px;
+      //}
+
+      &__active {
+        font-weight: 600;
+        border-bottom: 1px solid $blue-color;
+        color: $blue-color;
+        }
+  
+ 
+
+
+  }
+  &__btn {
+    padding: 8px 27px;
+    width: 135px;
+    height: 40px;
+    font-size: 16px;
+    text-align: center;
+  
+    
+  }
+ 
+}
+
 
 
 .hero__wrapper {
@@ -369,48 +435,9 @@
   }
 }
 
-.main__logo {
-  color: $blue-color;
-  font-size: 32px;
-  font-weight: bold;
-  text-decoration: none;
-  float: left;
-  width: 20%;
-}
-
-.main__span {
-  color: $pink-color;
-  display: inline-grid;
-}
-
-.main__nav {
-  float: right;
-  width: 80%;
-  display: inline-grid;
-}
-
-.main__item {
-  display: inline-grid;
-  font-weight: 400;
-  line-height: 24px;
-  font-size: 16px;
-  color: $blue-color;
-  text-decoration: none;
-}
-
-.main__element-active {
-  font-weight: bold;
-}
-
-.main_btn {
-  padding: 10px 30px;
-  width: 10%;
-  background: #ef5480;
-  color: #ffffff;
-  font-size: 16px;
-  line-height: 24px;
-  border: none;
-  border-radius: 35px;
-}
 
 @import 'expansion-kurac';
+
+
+
+
