--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'globals';
+@import 'hamburger-menu';
 //@import 'mixins';
 
 .mobile-header {
@@ -34,7 +35,6 @@
       }
     }
     &__open {
-      
       > span:first-child {
         transform: rotate(45deg);
       }
@@ -46,7 +46,6 @@
       }
     }
   }
-  
 
   &__dot {
     color: $pink-color;
@@ -56,14 +55,11 @@
 
 //Desktop-header
 .main-header {
-    
   &__nav {
     display: grid;
     grid-template-columns: auto auto auto;
     padding-right: 210px;
     padding-left: 210px;
-    
-
   }
   &__logo {
     display: flex;
@@ -71,7 +67,6 @@
     align-items: flex-start;
     padding-top: 22px;
     padding-right: 300px;
-    
   }
   &__logo :nth-child(2) {
     align-self: flex-end;
@@ -79,32 +74,25 @@
     padding-left: 4px;
   }
   &__nav__links {
-    
-     padding-top: 28px;
+    padding-top: 28px;
     padding-bottom: 28px;
   }
   &__nav__link {
-      text-decoration: none;
+    text-decoration: none;
+    color: $blue-color;
+    font-size: 16px;
+    font-weight: 400;
+    margin-right: 36px;
+
+    //&:not(:last-child){
+    // margin-right: 36px;
+    //}
+
+    &__active {
+      font-weight: 600;
+      border-bottom: 1px solid $blue-color;
       color: $blue-color;
-      font-size: 16px;
-      font-weight: 400;
-      margin-right: 36px;
-     
-       
-
-      //&:not(:last-child){
-       // margin-right: 36px;
-      //}
-
-      &__active {
-        font-weight: 600;
-        border-bottom: 1px solid $blue-color;
-        color: $blue-color;
-        }
-  
- 
-
-
+    }
   }
   &__btn {
     padding: 8px 27px;
@@ -112,13 +100,8 @@
     height: 40px;
     font-size: 16px;
     text-align: center;
-  
-    
   }
- 
 }
-
-
 
 .hero__wrapper {
   padding: 24px 60px;
@@ -435,9 +418,4 @@
   }
 }
 
-
 @import 'expansion-kurac';
-
-
-
-
