--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'globals';
 @import 'hamburger-menu';
+@import 'expansion-panel';
 //@import 'mixins';
 
 .mobile-header {
@@ -55,6 +56,7 @@
 
 //Desktop-header
 .main-header {
+  display: none;
   &__nav {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -418,4 +420,11 @@
   }
 }
 
-@import 'expansion-kurac';
+@media (min-width: 1024px) {
+  .main-header {
+    display: block;
+  }
+  .mobile-header {
+    display: none;
+  }
+}
